tests/diagnostics/catalog/snapshots/ir/IR0036.snap
error[IR0036]: IR_E_INVALID_INSTRUCTION
 --> tests/diagnostics/catalog/sources/ir/IR0036.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0036
  = help: keep IR validation diagnostics structured and catalog-backed
